convert from woodcutting to lumber

--- a/QuestPackages/daily/lumber/package.yml
+++ b/QuestPackages/daily/lumber/package.yml
@@ -3,7 +3,7 @@ package:
     - daily
 
 menus:
-  woodcuttingQuestsMenu:
+  lumberQuestsMenu:
     height: 4
     title: "Lumber Quests"
     slots:
