--- a/QuestPackages/daily/package.yml
+++ b/QuestPackages/daily/package.yml
@@ -6,14 +6,13 @@ menus:
   dailyMenu:
     height: 6
     title: '&f󏿽'
-#     bind: openMenuItem
     command: /daily
     slots:
       '19': miningQuestsMenu
       '38': fishingQuestsMenu
-#       '22': mobkillingQuestsMenu
+      '22': mobkillingQuestsMenu
       '42': farmingQuestsMenu
-#       '25': lumberQuestsMenu
+      '25': lumberQuestsMenu
     items:
       miningQuestsMenu:
         item: miningQuestsMenu
@@ -41,20 +40,20 @@ menus:
           left: openFishingQuestsMenu
           right: openFishingQuestsMenu
         close: true
-#       mobkillingQuestsMenu:
-#         item: mobkillingQuestsMenu
-#         amount: 1
-#         text:
-#         - '&5[&dCategory&5]'
-#         - '&f&lMob Quests'
-#         - ''
-#         - '&d&oMake the world'
-#         - '&d&oa better place,'
-#         - '&d&okill some mobs!'
-#         click:
-#           left: openMobkillingQuestsMenu
-#           right: openMobkillingQuestsMenu
-#         close: true
+      mobkillingQuestsMenu:
+        item: mobkillingQuestsMenu
+        amount: 1
+        text:
+        - '&5[&dCategory&5]'
+        - '&f&lMob Quests'
+        - ''
+        - '&d&oMake the world'
+        - '&d&oa better place,'
+        - '&d&okill some mobs!'
+        click:
+          left: openMobkillingQuestsMenu
+          right: openMobkillingQuestsMenu
+        close: true
       farmingQuestsMenu:
         item: farmingQuestsMenu
         amount: 1
@@ -68,19 +67,19 @@ menus:
           left: openFarmingQuestsMenu
           right: openFarmingQuestsMenu
         close: true
-#       lumberQuestsMenu:
-#         item: lumberQuestsMenu
-#         amount: 1
-#         text:
-#         - '&5[&dCategory&5]'
-#         - '&f&lLumber Quests'
-#         - ''
-#         - '&d&oGrow a beard!'
-#         - '&d&oChop some wood!'
-#         click:
-#           left: openLumberQuestsMenu
-#           right: openLumberQuestsMenu
-#         close: true
+      lumberQuestsMenu:
+        item: lumberQuestsMenu
+        amount: 1
+        text:
+        - '&5[&dCategory&5]'
+        - '&f&lLumber Quests'
+        - ''
+        - '&d&oGrow a beard!'
+        - '&d&oChop some wood!'
+        click:
+          left: openLumberQuestsMenu
+          right: openLumberQuestsMenu
+        close: true
       reputation:
         item: xpBottle
         amount: 1
@@ -129,9 +128,9 @@ events:
   resetCategoryTags: tag delete farming_active,mining_active,fishing_active,mobkill_active,lumber_active
   openMiningQuestsMenu: menu open daily-mining.miningQuestsMenu
   openFishingQuestsMenu: menu open daily-fishing.fishingQuestsMenu
-#   openMobkillingQuestsMenu: menu open daily-mobkill.mobkillingQuestsMenu
+  openMobkillingQuestsMenu: menu open daily-mobkill.mobkillingQuestsMenu
   openFarmingQuestsMenu: menu open daily-farming.farmingQuestsMenu
-#   openLumberQuestsMenu: menu open daily-lumber.lumberQuestsMenu
+  openLumberQuestsMenu: menu open daily-lumber.lumberQuestsMenu
   menuOpenSound: notify &aOpening Quest Menu! sound:block.amethyst_block.chime
   menuCloseSound: notify &aClosing Quest Menu! sound:block.azalea.step
   openDailyMenu: menu open dailyMenu        
