--- a/QuestTemplates/daily/fishing/package.yml
+++ b/QuestTemplates/daily/fishing/package.yml
@@ -4,7 +4,7 @@ package:
 
 objectives:
   collect: 'block $target_slug$ -$objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
-  shrine: 'chestput $shrineLocation$ $target$:$objective_amount$ events:finishFolder notify'
+  shrine: 'chestput $shrineLocation$ $target_drops_slug$:$objective_amount$ events:finishFolder notify'
   
 conditions:
   
